finish test admin validate