@@ -3,7 +3,6 @@ package com.programs.gis.service;
 import com.programs.gis.dao.AdminDao;
 import com.programs.gis.entity.Admin;
 import org.springframework.stereotype.Service;
-import sun.misc.BASE64Decoder;
 
 import javax.annotation.Resource;
 import java.io.IOException;
@@ -52,8 +51,7 @@ public class AdminService {
     public String base64Decoder(String encodeString) throws IOException {
         System.out.println("Decode The encodeString");
         System.out.println(encodeString);
-        BASE64Decoder decoder = new BASE64Decoder();//待修改
-        String result = new String(decoder.decodeBuffer(encodeString));
+        String result = new String(Base64.getDecoder().decode(encodeString));
         System.out.println(result);
         return result;
     }
